--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,7 +29,7 @@
                 
                 <br>
                 <br>
-                <%= typeof msg !== 'undefined' ? msg : '' %>
+                <%= typeof msg !== 'undefined' ? password : '' %>
                 <label for="password">Password:</label>
                 <br>
                 <input type="password" id="password" name="password" required>
