--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,11 +15,15 @@
                         
             <form action="/login" method="post">
                 <label for="name">Name:</label>
+                <% if (typeof(msg) !== 'undefined' && msg.text) { %>
+                    <br>
+                    <%= msg.text %>
+                <% } %>
                 <br>
                 <input type="text" id="name" name="name" required>
                 <br>
                 <br>
-                <label for="password">Password:</label>
+                <label for="password">Password:</label> 
                 <br>
                 <input type="password" id="password" name="password" required>
                 <br>
