--- a/views/ranking.ejs
+++ b/views/ranking.ejs
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <script src="/script.js"></script>
     <title>Ranking Page</title>
 </head>
 <body>
@@ -17,7 +16,7 @@
         <div class="rankImg"  id="rankImg">
             <img src="/ranking.png">
         </div>
-        <table>
+        <table id="rankTable">
             <thead>
                 <tr>
                     <th>User</th>
@@ -36,15 +35,43 @@
         </table>
     </div> 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-mZLF4UVrpi/QTWPA7BjNPEnkIfRFn4ZEO3Qt/HFklTJBj/gBOV8G3HcKn4NfQblz" crossorigin="anonymous"></script>
     <script>
-        const socket = io();
+        const socket = io('http://localhost:8080' );
 
+            socket.on('connect' , () => 
+            {
+                console.log('Client connected');
+            })
+        
         // Example: Receive an update event from the server
         socket.on('updateEvent', (data) => {
-            console.log('Received update event:', data.message);
-            document.write(Math.random());
+            updateTableContent(data)
         });
+
+        function updateTableContent(data) {
+            const tableBody = document.querySelector('#rankTable');
+            tableBody.innerHTML = ''; // Clear existing rows
+
+            const headerRow = document.createElement('tr');
+            headerRow.innerHTML = `
+                <th>User</th>
+                <th>Successful Logins</th>
+            `;
+            tableBody.appendChild(headerRow);
+
+            data.forEach(rowData => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${rowData.name}</td>
+                    <td>${rowData.entrenceCounter}</td>
+                `;
+                tableBody.appendChild(row);
+            });
+        }
+
+        
+        
     </script>
 </body>
 </html>
