--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,6 +27,12 @@
                 <br>
                 <input type="password" id="password" name="password" required>
                 <br>
+                <input type="checkbox" id="rememberMe" name="rememberMe" value="true">
+                <br>
+
+                <label>don't have account yet <a href="/register">register</a></label>
+                <br>
+
                 <button type="submit"> submit </button>
         </div>
     </div>
