--- a/views/register.ejs
+++ b/views/register.ejs
@@ -54,6 +54,7 @@
                 <input type="password" id="confirm_password" name="confirm_password" required>
                 
                 <br>
+                <label>do you alredy have accout <a href="/login">login</a></label>
                 <br>
 
                 <button type="submit">Register</button>
