--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,6 +27,7 @@
                 <br>
                 <input type="password" id="password" name="password" required>
                 <br>
+                <label for="checkbox">Rememebr me </label>
                 <input type="checkbox" id="rememberMe" name="rememberMe" value="true">
                 <br>
 
