--- a/views/ranking.ejs
+++ b/views/ranking.ejs
@@ -10,6 +10,11 @@
     <title>Ranking Page</title>
 </head>
 <body>
+    <div class="topBar" id="topBar" name="topBar">
+        <button id="logOff" name ="logOff">log off</button>
+
+
+    </div>
     <div class="userInfo" id="userInfo" name="userInfo">
         <h1><%= content.msg %></h1>
     </div>
@@ -36,15 +41,69 @@
         </table>
     </div> 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-mZLF4UVrpi/QTWPA7BjNPEnkIfRFn4ZEO3Qt/HFklTJBj/gBOV8G3HcKn4NfQblz" crossorigin="anonymous"></script>
     <script>
-        const socket = io();
+        const socket = io('http://localhost:8080' );
 
-        // Example: Receive an update event from the server
+            socket.on('connect' , () => 
+            {
+                console.log('Client connected');
+                document.cookie = "USR=; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
+            
+            })
+        
+        
         socket.on('updateEvent', (data) => {
-            console.log('Received update event:', data.message);
-            document.write(Math.random());
+            updateTableContent(data)
+            console.log('data')
+        });
+
+        function updateTableContent(data) {
+            const tableBody = document.querySelector('#rankTable');
+            tableBody.innerHTML = ''; 
+            const headerRow = document.createElement('tr');
+            headerRow.innerHTML = `
+                <th>User</th>
+                <th>Successful Logins</th>
+            `;
+            tableBody.appendChild(headerRow);
+
+            data.forEach(rowData => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${rowData.name}</td>
+                    <td>${rowData.entrenceCounter}</td>
+                `;
+                tableBody.appendChild(row);
+            });
+        }
+
+        
+        
+    </script>
+    <script>
+        function listCookies() {
+            var theCookies = document.cookie.split(';');
+            var aString = '';
+            for (var i = 1 ; i <= theCookies.length; i++) {
+                aString += i + ' ' + theCookies[i-1] + "\n";
+            }
+            return aString;
+        }
+
+        const logOffButton = document.getElementById('logOff');
+
+        logOffButton.addEventListener('click', function(event) {
+            event.preventDefault();
+            console.log('log Off');
+
+            console.log(listCookies())
+
+            document.cookie = "TC=; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
+            
+            window.location.href = '/login';
         });
     </script>
+
 </body>
 </html>
