--- a/views/ranking.ejs
+++ b/views/ranking.ejs
@@ -9,11 +9,6 @@
     <title>Ranking Page</title>
 </head>
 <body>
-    <div class="topBar" id="topBar" name="topBar">
-        <button id="logOff" name ="logOff">log off</button>
-
-
-    </div>
     <div class="userInfo" id="userInfo" name="userInfo">
         <h1><%= content.msg %></h1>
     </div>
@@ -40,59 +35,23 @@
         </table>
     </div> 
 
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" ></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-mZLF4UVrpi/QTWPA7BjNPEnkIfRFn4ZEO3Qt/HFklTJBj/gBOV8G3HcKn4NfQblz" crossorigin="anonymous"></script>
     <script>
         const socket = io('http://localhost:8080' );
 
             socket.on('connect' , () => 
             {
-                document.console.log('Client connected');
-                document.cookie = "USR=; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
-            
+                console.log('Client connected');
             })
         
-        
+        // Example: Receive an update event from the server
         socket.on('updateEvent', (data) => {
             updateTableContent(data)
-            console.log('data: ', data )
-        });
-
-        function updateTableContent(data) {
-            const tableBody = document.querySelector('#rankingTable');
-            tableBody.innerHTML = ''; 
-            const headerRow = document.createElement('tr');
-            headerRow.innerHTML = `
-                <th>User</th>
-                <th>Successful Logins</th>
-            `;
-            tableBody.appendChild(headerRow);
-
-            data.forEach(rowData => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${rowData.name}</td>
-                    <td>${rowData.entrenceCounter}</td>
-                `;
-                tableBody.appendChild(row);
-            });
-        }
-
-
-        const logOffButton = document.getElementById('logOff');
-
-        logOffButton.addEventListener('click', function(event) {
-            event.preventDefault();
-            console.log('log Off');
-
-
-            document.cookie = "TC=; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
-            
-            window.location.href = '/login';
         });
 
         function updateTableContent(data) {
             const tableBody = document.querySelector('#rankTable');
-            tableBody.innerHTML = ''; 
+            tableBody.innerHTML = ''; // Clear existing rows
 
             const headerRow = document.createElement('tr');
             headerRow.innerHTML = `
@@ -114,6 +73,5 @@
         
         
     </script>
-
 </body>
 </html>
